<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won&apos;t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won&apos;t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won&apos;t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won&apos;t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won&apos;t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="apptentive_about_description">Apptentive is a feedback and communication service which allows the people who make this app to quickly get your feedback and better listen to you.</string>
    <string name="apptentive_about_description_link">Find out more at apptentive.com</string>
    <string name="apptentive_about_privacy">Your feedback is hosted by Apptentive and is subject to Apptentive&apos;s privacy policy and the privacy policy of the developer of this app.</string>
    <string name="apptentive_about_privacy_link">Visit Apptentive&apos;s Privacy Policy</string>
    <string name="apptentive_about_title">About Apptentive</string>
    <string name="apptentive_do_you_love_this_app">Do you love %s?</string>
    <string name="apptentive_failed">Failed</string>
    <string name="apptentive_message_center_no_connection">Please connect to the internet to send feedback.</string>
    <string name="apptentive_message_center_server_error">It looks like we&apos;re having trouble accessing feedback. Please wait a bit and try again.</string>
    <string name="apptentive_message_center_title">Message Center</string>
    <string name="apptentive_no">No</string>
    <string name="apptentive_no_thanks">No thanks</string>
    <string name="apptentive_ok">OK</string>
    <string name="apptentive_oops">Oops!</string>
    <string name="apptentive_optional">Optional</string>
    <string name="apptentive_powered_by_apptentive">Powered by</string>
    <string name="apptentive_rate_this_app">Rate %s</string>
    <string name="apptentive_rating_error">We&apos;re unable to find this app in the store. Please visit the store to find and rate it.</string>
    <string name="apptentive_rating_message_fs">We&apos;re so happy to hear that you love %s! It&apos;d be really helpful if you rated us. Thanks so much for spending some time with us.</string>
    <string name="apptentive_rating_provider_no_amazon_appstore">Amazon Appstore was not found. Please install Amazon Appstore before rating this app.</string>
    <string name="apptentive_rating_provider_no_google_play">Google Play was not found. Please install Google Play before rating this app.</string>
    <string name="apptentive_rating_provider_no_mikandi">MiKandi Market was not found. Please install MiKandi Market before rating this app.</string>
    <string name="apptentive_rating_remind">Remind Me Later</string>
    <string name="apptentive_required">Required</string>
    <string name="ebk_image_picker_action_set_as_gallery">Set as Gallery</string>
    <string name="ebk_image_picker_crop">Crop</string>
    <string name="ebk_image_picker_delete">Delete</string>
    <string name="ebk_image_picker_rotate">Rotate</string>
    <string name="activation_dialog">Your account is now active.\nWelcome to Gumtree.</string>
    <string name="content_desc_check_background">Check background</string>
    <string name="content_desc_postad_check">Valid field</string>
    <string name="daily_alert">Daily alerts</string>
    <string name="environment_preference_key">environment</string>
    <string name="environment_preference_summary">Select an environment and then restart the app.\nCurrently on: &quot;%s&quot;</string>
    <string name="environment_preference_title">Environment</string>
    <string name="login_now">Login Now</string>
    <string name="menu_done">GO</string>
    <string name="menu_search">Search</string>
    <string name="neighborhood">Local area (optional)</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notifications_chat_message_description">Enable/disable notifications for new messages</string>
    <string name="notifications_chat_message_title">Messages</string>
    <string name="notifications_saved_searches_description">Enable/disable notifications for saved searches</string>
    <string name="notifications_saved_searches_title">Search Alerts</string>
    <string name="postcode_done">DONE</string>
    <string name="postcode_hint">Postcode search</string>
    <string name="refine_list_content_description">refine_list</string>
    <string name="reset_password_check_junk_mail">If you don&apos;t get an email from us in a few minutes, please check your junk mail or try again.</string>
    <string name="reset_password_email_sent">Reset password email sent.</string>
    <string name="saved_searches_dialog">Your search is saved</string>
    <string name="saved_searches_email_note">You will only receive an alert if we find new listings that match your search.</string>
    <string name="settings_account_details_subtitle">Update your details and preferences via the website</string>
    <string name="settings_account_details_title">My account details</string>
    <string name="sub_title_telecapture">To successfully post this ad you&apos;ll need to do the following:</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_app_info">App info</string>
    <string name="text_app_version">Version</string>
    <string name="text_capitalised_category">Category</string>
    <string name="text_capitalised_description">Description</string>
    <string name="text_capitalised_email">Email</string>
    <string name="text_capitalised_location">Location</string>
    <string name="text_capitalised_price">Price</string>
    <string name="text_capitalised_telephone">Telephone</string>
    <string name="text_clear_search_data">Clear search data</string>
    <string name="text_clear_search_history">Clear search history</string>
    <string name="text_end_telecapture">Sorry, we know this is not ideal. We&apos;re on the case.</string>
    <string name="text_no_thanks_btn">NO THANKS</string>
    <string name="text_refinements">Refinements</string>
    <string name="text_telecapture_1">Visit our desktop site www.gumtree.com</string>
    <string name="text_telecapture_2">Login and go to &quot;Manage my ads&quot;</string>
    <string name="text_telecapture_3">Find your ad, edit and post again</string>
    <string name="text_telecapture_4">Follow the confirmation process to get your ad live</string>
    <string name="text_telecapture_button">GO TO WEBSITE</string>
    <string name="text_title">Title</string>
    <string name="visible_on_map">Show a map on my ad</string>
</resources>