<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/ebk_image_picker_primary_color" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f01006d">
    <ImageButton android:id="@+id/action_button_rotate" android:paddingLeft="@dimen/gutter_2x" android:paddingRight="@dimen/gutter_2x" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/ebk_image_picker_ic_rotate" android:layout_alignParentLeft="true" android:contentDescription="@string/ebk_image_picker_rotate" style="@style/ActionBarButton" />
    <ImageButton android:id="@+id/action_button_crop" android:paddingLeft="@dimen/gutter_2x" android:paddingRight="@dimen/gutter_2x" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/ebk_image_picker_ic_crop" android:layout_toRightOf="@+id/action_button_rotate" android:contentDescription="@string/ebk_image_picker_crop" style="@style/ActionBarButton" />
    <ImageButton android:id="@+id/action_button_delete" android:paddingLeft="@dimen/gutter_2x" android:paddingRight="@dimen/gutter_2x" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="@drawable/ebk_image_picker_ic_trash" android:layout_alignParentRight="true" android:contentDescription="@string/ebk_image_picker_delete" style="@style/ActionBarButton" />
    <Button android:textAppearance="?unknown_attr_ref: 1010360" android:textColor="@color/ebk_image_picker_set_as_gallery_text" android:id="@+id/action_button_set_as_gallery" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/ebk_image_picker_action_set_as_gallery" android:layout_toLeftOf="@+id/action_button_delete" android:layout_toRightOf="@+id/action_button_crop" android:textAllCaps="true" style="@style/ActionBarButton" />
</RelativeLayout>
