<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:orientation="vertical" app:background="@color/white" app:paddingLeft="@dimen/keyline" app:paddingRight="@dimen/keyline" app:layout_width="match_parent" app:layout_height="match_parent">
    <RelativeLayout app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="@dimen/keyline_2x">
        <android.support.v7.widget.AppCompatImageView app:id="@+id/reset_password_email_sent_icon" app:layout_width="UNKNOWN_DATA_0x7f0801af" app:layout_height="UNKNOWN_DATA_0x7f0801af" app:src="@drawable/circular_check_background" app:supportTintColor="@color/green" />
        <android.support.v7.widget.AppCompatImageView app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/check" app:padding="4dp" app:layout_width="UNKNOWN_DATA_0x7f0801af" app:layout_height="UNKNOWN_DATA_0x7f0801af" app:contentDescription="@string/content_desc_postad_check" app:srcCompat="@drawable/ic_check_white" />
        <TextView app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginLeft="@dimen/keyline" app:text="@string/reset_password_email_sent" app:layout_toRightOf="@+id/reset_password_email_sent_icon" app:layout_centerVertical="true" style="@style/Text_Title" />
    </RelativeLayout>
    <TextView app:id="@+id/reset_password_email" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="@dimen/keyline_1_5x" style="@style/Text_Subhead" />
    <TextView app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="@dimen/keyline_1_5x" app:text="@string/reset_password_check_junk_mail" />
</LinearLayout>
