<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:orientation="vertical" app:paddingLeft="@dimen/keyline" app:paddingRight="@dimen/keyline" app:layout_width="match_parent" app:layout_height="wrap_content">
    <RelativeLayout app:layout_width="match_parent" app:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout app:id="@+id/search_postcode_layout" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="@dimen/keyline">
            <EditText app:id="@+id/search_postcode" app:layout_width="match_parent" app:layout_height="wrap_content" app:hint="@string/postcode_hint" app:maxLength="100" app:freezesText="true" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|numberPassword|phone|date" app:imeOptions="actionGo|actionSearch|actionDone|actionPrevious" />
        </android.support.design.widget.TextInputLayout>
        <Button app:id="@+id/postcode_search_button" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/menu_done" app:layout_alignParentRight="true" app:layout_centerVertical="true" style="@style/Button_PrimaryAction" />
    </RelativeLayout>
    <TextView app:textAppearance="@style/Text_Body1" app:id="@+id/location_breadcrumb" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="@dimen/keyline" app:layout_below="@+id/search_postcode" app:layout_alignParentLeft="true" />
    <RelativeLayout app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="@dimen/keyline">
        <com.gumtree.android.common.views.TintImageView app:id="0x1020007" app:layout_width="wrap_content" app:layout_height="wrap_content" app:src="@drawable/ic_keyboard_arrow_right_white_24dp" app:scaleType="center" app:layout_alignParentLeft="true" app:layout_centerVertical="true" app:supportTintColor="?attr/colorIcon" />
        <EditText app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/free_text_location" app:layout_width="match_parent" app:layout_height="wrap_content" app:hint="@string/neighborhood" app:singleLine="true" app:layout_toRightOf="0x1020007" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|numberPassword|phone|date" app:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious" />
    </RelativeLayout>
    <CheckBox app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/visibleOnMap" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="@dimen/keyline" app:checked="false" app:text="@string/visible_on_map" app:layout_below="@+id/free_text_location" />
    <Button app:id="@+id/postcode_done" app:visibility="gone" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="@dimen/keyline" app:text="@string/postcode_done" style="@style/Button_PrimaryAction" />
</LinearLayout>
