<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="@style/Text_Title" android:id="@+id/saved_search_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/keyline" android:layout_marginTop="@dimen/keyline" android:text="@string/saved_searches_dialog" />
    <Space android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f080047" />
    <RelativeLayout android:orientation="vertical" android:padding="@dimen/keyline" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textAppearance="@style/Text_Subhead" android:id="@+id/saved_search_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/daily_alert" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <com.gumtree.android.common.views.fields.RestorableSwitch android:id="0x1020017" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/saved_search_email" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:textAppearance="@style/Text_Body1" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/saved_search_email_note" android:paddingLeft="@dimen/keyline" android:paddingTop="@dimen/keyline_half" android:paddingRight="@dimen/keyline" android:paddingBottom="@dimen/keyline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/saved_searches_email_note" />
</LinearLayout>
